--- a/src/blocks/popup/popup.css
+++ b/src/blocks/popup/popup.css
@@ -26,11 +26,11 @@
   left: 0;
   bottom: 0;
   right: 0;
-  /*Стили для плавного появления модалки*/
+  
   visibility: hidden;
   opacity: 0;
   pointer-events: none;
   user-select: none;
-  transition: visibility 0s, opacity 0.6s;
+  transition: visibility 0.2s ease, opacity 0.3s;
   z-index: 10;
 }
