--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -10,7 +10,7 @@
   color: #fff;
   display: flex;
   align-items: center;
-  padding: 36px 0;
+  padding: 36px 150px;
   /*Если подгонять под ПЭПЭ, то тут padding: 40px 0; Проявите лоялити*/
 }
 
