--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -4,7 +4,7 @@
   font-family: 'Inter', Arial, sans-serif;
   flex-shrink: 0;
   margin-top: auto;
-  padding: 30px 0 60px;
+  padding: 30px 150px 60px;
 }
 
 @media screen and (max-width: 568px) {
