--- a/src/blocks/page/__section/page__section.css
+++ b/src/blocks/page/__section/page__section.css
@@ -1,12 +1,14 @@
 .page__section {
   width: 100%;
-  max-width: 882px;
+  max-width: 1500px;
   /*Опционально. Тут можно принять проект и без ограничения максимальной ширины.*/
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   position: relative;
   margin: 0 auto;
+  padding-left: 150px;
+    padding-right: 150px;
 }
 
 @media screen and (max-width: 1140px) {
