--- a/src/blocks/profile/__edit-button/profile__edit-button.css
+++ b/src/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,7 +14,7 @@
   -ms-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
-  /*Транзишн пора бы уже знать*/
+  border-radius: 35%;
   padding: 0;
   margin: 0;
 }
