--- a/src/blocks/profile/profile.css
+++ b/src/blocks/profile/profile.css
@@ -11,13 +11,24 @@
   display: flex;
   align-items: center;
   padding: 36px 150px;
-  /*Если подгонять под ПЭПЭ, то тут padding: 40px 0; Проявите лоялити*/
+  margin-bottom: 40px;
+  
+}
+
+@media screen and (max-width: 1000px) {
+  .profile {
+    
+    flex-direction: column;
+    
+    
+  }
 }
 
 @media screen and (max-width: 480px) {
   .profile {
     padding: 43px 0;
-    flex-direction: column;
+    
     text-align: center;
+    
   }
 }
