--- a/src/blocks/page/__section/page__section.css
+++ b/src/blocks/page/__section/page__section.css
@@ -1,7 +1,7 @@
 .page__section {
   width: 100%;
   max-width: 1500px;
-  /*Опционально. Тут можно принять проект и без ограничения максимальной ширины.*/
+ 
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -14,5 +14,18 @@
 @media screen and (max-width: 1140px) {
   .page__section {
     width: calc(100% - 40px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .page__section {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .page__section {
+    padding-left: 0px;
+    padding-right: 0px;
   }
 }
