--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -18,6 +18,7 @@
 
 .profile__add-button:hover {
   opacity: 0.6;
+  background: #8EA737 url('../../../images/add-icon.svg') center no-repeat;
 }
 
 @media screen and (max-width: 740px) {
