--- a/src/components/App/app.css
+++ b/src/components/App/app.css
@@ -3,6 +3,8 @@ a {
   text-decoration: none
 }
 
+body
+
 .tabs {
   color: #fff;
   display: flex;
@@ -19,13 +21,13 @@ a {
   border-top-right-radius: 15px;
   margin-right: 4px;
   border-bottom: none;
-  background: linear-gradient(to bottom, rgb(31, 31, 31) 70%, black);
+  babackground: linear-gradient(to bottom, rgb(31, 31, 31) 50%, #07070700);
   transition: transform 0.2s ease;
 }
 
 .tab_active {
   transform: scale(1.2);
   color: #fff;
-  
+  background: linear-gradient(to bottom, #8AA32F 90%, #07070700);
   border-bottom: none;
 }
