--- a/src/blocks/profile/__add-button/profile__add-button.css
+++ b/src/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button {
   width: 150px;
   height: 50px;
-  background: transparent url("../../../images/add-icon.svg") center no-repeat;
+  background: #0000007a url("../../../images/add-icon.svg") center no-repeat;
   background-size: 22px;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
@@ -30,6 +30,7 @@
 
 @media screen and (max-width: 480px) {
   .profile__add-button {
-    width: 100%;
+    width: 50%;
+    margin: auto;
   }
 }
