--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -2,19 +2,35 @@
   .login {
     color: white;
     display: flex;
-    font-family: "Roboto";
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    font-family: 'Inter', Arial, sans-serif;
+    max-width: 400px;
+    margin: auto;
+    height: 450px;
+    width: 100%;
   }
   .login__welcome {
     font-size: 24px;
+    margin: auto;
   }
   .login__form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+    height: 45%;
   }
   .login__form input {
+    background: black;
+    border: none;
+    border-bottom: 1px solid white;
+    font-size: 16px;
+    outline: none;
+    color: #fff;
+    padding: 5px;
+  }
+  .login__form input::placeholder {
+    color: white;
   }
   .login__form label {
     font-size: 18px;
@@ -33,16 +49,28 @@
   .signup__link {
     color: white;
   }
-  .login__button-container {
-    display: flex;
-    justify-content: center;
-  }
-  .login__link {
-    text-align: center;
-    margin-top: 32px;
-    border: none;
-    background-color: rgba(0, 0, 0, 0);
+  header .signup__link {
     color: white;
-    font-size: 16px;
+    margin-left: auto;
+  }
+ 
+  .login__button {
+    width: 100%;
+    height: 38px;
+    font-size: 18px;
+    line-height: 22px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #fff;
+    border-radius: 2px;
+    border: none;
+    transition: visibility 0s, background 0.3s;
+    outline: none;
+  }
+
+  .login__button:hover {
+    background: rgb(184, 184, 184);
   }
   
