--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -4,6 +4,7 @@
   font-family: 'Inter', Arial, sans-serif;
   flex-shrink: 0;  
   padding: 30px 150px 60px;
+  margin-top: auto;
 }
 
 @media screen and (max-width: 568px) {
