--- a/src/components/Spinner/spinner.css
+++ b/src/components/Spinner/spinner.css
@@ -1,7 +1,11 @@
 #spinner {
   width: 75px;
   height: 75px;
-  margin: auto;
+  position: fixed;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    z-index: 50;
 }
 .animated-logo {
   display: inline-block;
