--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -1,15 +1,15 @@
 .card__description {
   display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #0000003b;
-    padding: 25px 20px;
-    position: absolute;
-    bottom: 0;
-    z-index: 5;
-    width: 100%;
-    box-sizing: border-box;
-    color: white;
+  justify-content: space-between;
+  align-items: center;
+  background: #0000003b;
+  padding: 25px 20px;
+  position: absolute;
+  bottom: 0;
+  z-index: 5;
+  width: 100%;
+  box-sizing: border-box;
+  color: white;
 }
 .card__friend-description {
   display: flex;
@@ -20,8 +20,9 @@
   flex-direction: column;
   align-items: flex-start;
   position: absolute;
-    bottom: 0;
-    z-index: 5;
-    width: 100%;
-    box-sizing: border-box;
+  bottom: 0;
+  z-index: 5;
+  width: 100%;
+  box-sizing: border-box;
+  min-height: 88px;
 }
